--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "execut0r",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
   }
 }
