--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "javascript-time-ago": "^2.5.9",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "timeago.js": "^4.0.2"
   }
 }
